[package]
name = "rainbow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.2.5", features = ["trace"] }
tower = "0.4.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
mime = "0.3.16"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls", "mysql", "all-types", "macros"] }
chrono = {version = "0.4.19",features=["serde"]}
redis = { version = "0.17.0", features = ["tokio-comp"] }
bytes = "1.1.0"
hyper = "0.14.24"
anyhow = "1.0"
thiserror = "1.0"
tonic = { version = "0.8" }
prost = "0.11"
regex = "1.6.0"

[build-dependencies]
tonic-build = { version = "0.8", features = ["prost"] }
anyhow = "1.0"
